--- a/introduction_to_alchemistry/alchemical_setup.ipynb
+++ b/introduction_to_alchemistry/alchemical_setup.ipynb
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BSS.Align.drawMapping(ethane, methanol, mapping)"
+    "BSS.Align.viewMapping(ethane, methanol, mapping)"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BSS.Align.drawMapping(methanol, ethane, {v:k for k,v in mapping.items()})"
+    "BSS.Align.viewMapping(methanol, ethane, {v:k for k,v in mapping.items()})"
    ]
   },
   {
@@ -686,7 +686,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
