Update answers for current BSS version

--- a/introduction_to_alchemistry/answers/alchemical_setup_solution.ipynb
+++ b/introduction_to_alchemistry/answers/alchemical_setup_solution.ipynb
@@ -28,8 +28,7 @@
     "- `BSS.Align.merge()` Creates a merged molecule used for alchemical simulations\n",
     "- `BSS.Solvent.tip3p()` Solvates a molecule in a tip3 water box\n",
     "- `BSS.Protocol.FreeEnergy()` Defines the free energy protocol\n",
-    "- `BSS.FreeEnergy.Solvation()` Sets up a solvation free energy process\n",
-    "- `BSS.FreeEnergy.Binding()` Sets up a binding free energy process\n",
+    "- `BSS.FreeEnergy.Relative()` Sets up a leg for a relative free-energy simulation\n",
     "\n",
     "\n",
     "**Reading time**:\n",
@@ -177,7 +176,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have the mapping we can align the molecules to each other using a root mean squared displacemnt (RMSD) metric and from the alignment we can then create a merged molecule which contains all of the `single topology` information needed for the alchemical perturbation."
+    "Once we have the mapping we can align the molecules to each other using a root mean squared displacemnt (RMSD) metric and from the alignment we can then create a merged molecule which contains all of the `single topology` information needed for the alchemical perturbation.\n",
+    "\n",
+    "To visualise the mapping we can use:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BSS.Align.viewMapping(ethane, methanol, mapping)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This shows ethane, with the atoms that map to those in methanol highlighted in red. The numbers next to the atoms are their indices within the molecule (and mapping dictionary).To instead use methanol as the reference, we can swap the order of the molecules that are passed to the function and invert the mapping dictionary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BSS.Align.viewMapping(methanol, ethane, {v:k for k,v in mapping.items()})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Creating a _merged_ molecule\n",
+    "\n",
+    "In order to perform an alchemical simulation we need to create a _merged_ molecule that combines that properties of the two molecules. To do so we first need to align one molecule to the other, based on the mapping. This can be achieved using the `rsmdAlign` function:"
    ]
   },
   {
@@ -187,24 +222,14 @@
    "outputs": [],
    "source": [
     "# Align ethane to methanol based on the mapping.\n",
-    "ethane = BSS.Align.rmsdAlign(ethane, methanol, mapping)\n",
-    "\n",
-    "# Merge the ethane and methanol based on the mapping.\n",
-    "merged = BSS.Align.merge(ethane, methanol, mapping)"
+    "ethane = BSS.Align.rmsdAlign(ethane, methanol, mapping)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Creating a morph\n",
-    "<a id=\"morph\"></a>\n",
-    "\n",
-    "Different software tools have different ways of running alchemical free energy calculations. If you were to use `SOMD` for the underlying free energy calculations you will automatically generate something called a `pert` file. This file contains information for how all parameters, e.g. the charges, change with between the two end states of the perturbation, $\\lambda=0$ and $\\lambda=1$.\n",
-    "\n",
-    "Let's have a closer look at this merged molecule:\n",
-    "\n",
-    "First we'll use an internal functional of BioSimSpace to extract the properties for the end state of the perturbation, $\\lambda=1$. (This isn't something the user nornally needs to do, hence the function is private, i.e. _hidden_.)"
+    "We can now _merge_ the two molecules. This will create a composite molecule containing all of the molecular properties at both end states. If the molecules are a different size, then the smaller will contain dummy atoms to represent the atoms that will _appear_ during the perturbation. In this case, the merged methanol end state will contain two dummy atoms corresponding to the extra hydrogen atoms in the ethane molecule."
    ]
   },
   {
@@ -213,49 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract the lambda = 1 state and save to file.\n",
-    "BSS.IO.saveMolecules(\"test\", merged._toRegularMolecule(is_lambda1=True), \"pdb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# View the lambda = 1 state.\n",
-    "BSS.Notebook.View(\"test.pdb\").system()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cat 'test.pdb'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate the SOMD perurbation (pert) file. Again, this is normally done automatically by\n",
-    "# BioSimSpace during the simulation set up, so the functionality is hidden by default. The\n",
-    "# function also returns the lambda = 0 state of the perturbation, which is used to generate\n",
-    "# the required coordinate and topology input files for SOMD. Here we ignore this return argument.\n",
-    "merged._toPertFile(\"ethane_methanol.pert\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!head -n 20 ethane_methanol.pert"
+    "# Merge the ethane and methanol based on the mapping.\n",
+    "merged = BSS.Align.merge(ethane, methanol, mapping)"
    ]
   },
   {
@@ -281,6 +265,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.4 Reading and writing perturbable systems\n",
+    "\n",
+    "You might wish to save a perturbable system to file for use in a future simulation, or to share with a colleague. To do so you can use the `BioSimSpace.IO.savePerturbableSystem` function. This writes the topology and coordinate files for the two end states, which can be read back to reconstruct the system. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BSS.IO.savePerturbableSystem(\"pert\", solvated)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There should now be four new AMBER format files in your working directory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! ls pert*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here `pert0.prm7` and `pert1.prm7` are the topology files for the two end states and `pert0.rst7` and `pert1.rst7` are the coordinates. To re-load the files we can use:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solvated = BSS.IO.readPerturbableSystem(\"pert0.prm7\", \"pert0.rst7\", \"pert1.prm7\", \"pert1.rst7\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Solvation free energy\n",
     "<a id=\"free\"></a>\n",
     "We now need to define a protocol to describe the parameters used for the free energy perturbation. A simple protocol consists of a 2 fs timestep a runtime of 4 ns and using equally spaced 9 $\\lambda$ windows:"
@@ -299,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we want to create a free energy simulation _process_ to apply our protocol to the solvated system containing the merged molecule:"
+    "Next we want to create objects to configure and run the two legs associated with the relative free-energy perturbation calculation:"
    ]
   },
   {
@@ -308,36 +342,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "freenrg = BSS.FreeEnergy.Solvation(solvated, protocol, work_dir=\"ethane_methanol_somd\")"
+    "fep_free = BSS.FreeEnergy.Relative(solvated, protocol, work_dir=\"ethane_methanol_somd/free\")\n",
+    "fep_vac  = BSS.FreeEnergy.Relative(merged.toSystem(), protocol, work_dir=\"ethane_methanol_somd/vacuum\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next you would run the alchemical free energy simulation in the following way:\n",
+    "Decoupling the two legs means that we can use a different protocol for each, e.g. less lambda windows for the vacuum leg, or re-use data from a leg in an entirely different calculation, e.g. for a binding free-energy simulation, or to combine results for legs that were run with entirely simulation engines, e.g. SOMD or GROMACS.\n",
     "\n",
-    "`freenrg.run()`   \n",
+    "To run simulations for all of the individual lambda windows for the free leg, you can use:\n",
+    "\n",
+    "`fep_free.run()`   \n",
     "\n",
     "This only makes sense on a workstation with GPUs or GPU cloud resources or a GPU cluster. Otherwise you will have to wait for too long to run these simulations on the notebook server.\n",
     "\n",
-    "Let's have a look the `ethane_methanol` directory. In this directory you have now all the files setup and ready for simulation using SOMD as the simulation engine, which is the default."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! ls ethane_methanol_somd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice how the `work_dir` contains two directories, `free` and `vacuum`. The `free` directory contains the files needed to simulate the perturbation for the _solvated_ system, whereas _vacuum_, unsurprisingly, contains files for the vacuum perturbation. Have a look at the content of these directories, which contain sub-directories for each lambda window of the perturbations."
+    "Let's have a look the `ethane_methanol_somd/free` directory. In this directory you have now all the files setup and ready for simulation using SOMD as the simulation engine, which is the default."
    ]
   },
   {
@@ -374,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protocol = BSS.Protocol.FreeEnergy(timestep=2*BSS.Units.Time.femtosecond, runtime=4*BSS.Units.Time.nanosecond, num_lam=12)"
+    "rotocol = BSS.Protocol.FreeEnergy(timestep=2*BSS.Units.Time.femtosecond, runtime=4*BSS.Units.Time.nanosecond, num_lam=12)"
    ]
   },
   {
@@ -399,7 +420,8 @@
     "# Merge the two molecules based on the mapping.\n",
     "merged_methanol = BSS.Align.merge(methanol, ethane, mapping)\n",
     "solvated_methanol = BSS.Solvent.tip3p(molecule=merged_methanol, box=3*[40*BSS.Units.Length.angstrom])\n",
-    "freenrg_methanol = BSS.FreeEnergy.Solvation(solvated_methanol, protocol, work_dir=\"methanol_ethane\")"
+    "fep_methanol_free = BSS.FreeEnergy.Relative(solvated_methanol, protocol, work_dir=\"methanol_ethane\")\n",
+    "fep_methanol_vac = BSS.FreeEnergy.Relative(merged_methanol.toSystem(), protocol, work_dir=\"methanol_ethane\")"
    ]
   },
   {
@@ -408,9 +430,9 @@
    "source": [
     "### 3.1.3. Exercise on using different simulation engines\n",
     "\n",
-    "Currently, alchemical free energy simulations with SOMD and Gromacs are supported. Can you figure out how to setup and run the simulations using GROMACS rather than the default of SOMD?\n",
+    "Currently, alchemical free energy simulations with SOMD and Gromacs are supported. Can you figure out how to setup and run the simulations for the free leg using GROMACS rather than the default of SOMD?\n",
     "\n",
-    "**Hint**: look at the `engine` keyword of `FreeEnergy.Solvation()`. You might also want to change the working directory."
+    "**Hint**: look at the `engine` keyword of `FreeEnergy.Relative()`. You might also want to change the working directory."
    ]
   },
   {
@@ -419,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "freenrg_gromacs = BSS.FreeEnergy.Solvation(solvated_methanol, protocol, work_dir=\"methanol_ethane_gromacs\", engine=\"gromacs\")"
+    "fep_gromacs_free = BSS.FreeEnergy.Relative(solvated_methanol, protocol, work_dir=\"methanol_ethane_gromacs\", engine=\"gromacs\")"
    ]
   },
   {
@@ -435,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ls ethane_methanol_gromacs/free/lambda_0.0000"
+    "! ls methanol_ethane_gromacs/lambda_0.0000/"
    ]
   },
   {
@@ -574,7 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system = merged + lysozyme"
+    "complx = merged + lysozyme"
    ]
   },
   {
@@ -591,33 +613,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solvate in a 60 angstrom box of TIP3P water.\n",
-    "solvated = BSS.Solvent.tip3p(molecule=system, box=3*[60*BSS.Units.Length.angstrom])\n",
+    "# Solvate the protein ligand complex in a 60 angstrom box of TIP3P water.\n",
+    "complex_sol = BSS.Solvent.tip3p(molecule=complx, box=3*[60*BSS.Units.Length.angstrom])\n",
+    "\n",
+    "# Solvate the merged ligand in a 60 angstrom box of TIP3P water.\n",
+    "merged_sol = BSS.Solvent.tip3p(molecule=merged, box=3*[60*BSS.Units.Length.angstrom])\n",
     "\n",
     "# Create the free energy protocol.\n",
     "protocol = BSS.Protocol.FreeEnergy(runtime=4*BSS.Units.Time.nanosecond, num_lam=9)\n",
     "\n",
-    "# Initialise the binding free energy object. (Once again, this defaults to the SOMD engine.)\n",
-    "freenrg = BSS.FreeEnergy.Binding(solvated, protocol, work_dir=\"Binding_o_xylene_benzene\" )"
+    "# Initialise relative free energy objects for each leg.\n",
+    "# (Once again, this defaults to the SOMD engine.)\n",
+    "fep_bound = BSS.FreeEnergy.Relative(complex_sol, protocol, work_dir=\"o_xylene_benzene/bound\" )\n",
+    "fep_free  = BSS.FreeEnergy.Relative(merged_sol, protocol, work_dir=\"o_xylene_benzene/free\" )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`freenrg.run()`\n",
-    "Would again run the simulation again. \n",
+    "`fep_bound.run()`\n",
+    "Would run the simulation for the _bound_ leg.. \n",
     "\n",
     "### 5.5 Exercises\n",
     "<a id=\"exerc2\"></a>\n",
     "Exercises for binding free energies. \n",
     "\n",
-    "### 5.5.1 Looking at the directories\n",
-    "Just take a look at the directory that was generated using `BSS.FreeEnergy.Binding()`.\n",
-    "What are the differences and similarities you can observe between the solvation free energies setup and binding free energy setup? \n",
-    "\n",
-    "### 5.5.2 Box sizes of the solvated leg\n",
-    "One thing you can notice is that the box size of the bound and free leg are the same. This of course is a bit silly, because you don't need to use such a large box for just running the ligand in water. There is a handy way of adjusting this. "
+    "### 5.5.1 Box sizes of the solvated leg\n",
+    "One thing you can notice is that the box size of the bound and free leg are the same. This of course is a bit silly, because you don't need to use such a large box for just running the ligand in water. Since the two legs are decoupled, we can just solvate the ligand in a smaller box for the free leg."
    ]
   },
   {
@@ -626,22 +649,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solvate in a 60 angstrom box of TIP3P water.\n",
-    "solvated = BSS.Solvent.tip3p(molecule=system, box=3*[60*BSS.Units.Length.angstrom])\n",
-    "\n",
-    "# Create the free energy protocol.\n",
-    "protocol = BSS.Protocol.FreeEnergy(runtime=4*BSS.Units.Time.nanosecond, num_lam=9)\n",
-    "\n",
+    "# Solvate the ligand in a smaller 30 angstrom box of TIP3P water.\n",
     "# Try using a work_dir called \"exercise_5\" and a box size for the free leg of the simulations of 30 Angstrom. \n",
-    "freenrg = BSS.FreeEnergy.Binding(solvated, protocol, work_dir=\"exercise_5\", box=3*[30*BSS.Units.Length.angstrom])"
+    "merged_sol = BSS.Solvent.tip3p(molecule=merged, work_dir=\"exercise_5\", box=3*[30*BSS.Units.Length.angstrom])\n",
+    "\n",
+    "\n",
+    "# Recreate the object using the smaller system.\n",
+    "fep_free = BSS.FreeEnergy.Relative(merged_sol, protocol, work_dir=\"o_xylene_benzene/free\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.5.3. Running a minimisation and equilibration before the production\n",
-    "While `SOMD` will automatically minimise and equilibrate the system as part of the free energy simulation, GROMACS will not. You can use BioSimSpace to do this.\n",
+    "### 5.5.2. Running a minimisation and equilibration before the production\n",
+    "\n",
+    "It is good practice to minimise and equilibrate the molecular system _before_ setting up the free energy simulations. Thankfully BiomSpace can handle systems containing perturbable molecules for simulation protocols other than `BioSimSpace.Protocol.FreeEnergy`. For example, this means that you can create a process to minimise a specified end state (lambda = 0 by default) of a perturbable system. In the box below, write some code to run a minmisation and equilibration on the system (`complx`).\n",
     "\n",
     "**Hint**: use the [documentation](https://biosimspace.org/). Also when returning the system use `getSystem(block=True)` so that we wait for the minimisation and equilibration simulations to finish before returning the system."
    ]
@@ -652,27 +675,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solvate in a 60 angstrom box of TIP3P water.\n",
-    "solvated = BSS.Solvent.tip3p(molecule=system, box=3*[60*BSS.Units.Length.angstrom])\n",
-    "\n",
     "# Minimise the system.\n",
     "minimised = BSS.Process.Gromacs(solvated, BSS.Protocol.Minimisation()).start().getSystem(block=True)\n",
     "\n",
     "# Equilibrate the system.\n",
     "equilibrated = BSS.Process.Gromacs(minimised, BSS.Protocol.Equilibration()).start().getSystem(block=True)\n",
     "\n",
-    "\n",
     "# Create the free energy protocol.\n",
     "protocol = BSS.Protocol.FreeEnergy(runtime=4*BSS.Units.Time.nanosecond, num_lam=9)\n",
     "\n",
-    "# Initialise the binding free energy object.\n",
-    "freenrg = BSS.FreeEnergy.Binding(equilibrated, protocol, work_dir=\"exercise_5_3\", engine=\"gromacs\")"
+    "# Initialise relative free energy objects for each leg.\n",
+    "fep_bound = BSS.FreeEnergy.Relative(equilibrated, protocol, work_dir=\"exercise_5_3/bound\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -686,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
