--- a/introduction_to_alchemistry/alchemical_setup.ipynb
+++ b/introduction_to_alchemistry/alchemical_setup.ipynb
@@ -70,7 +70,7 @@
     "## 1. Free energy of solvation of ethane and methanol\n",
     "<a id=\"lig\"></a>\n",
     "\n",
-    "We want to compute the relative free energy of hydration between ethane and methanol. That is the free energy difference between hydrating an ethane molecule in water and a methanol molecule in water. (For reference, refer to the [slides](slides/CCPBioSim-FEP-tutorial.pdf)).\n",
+    "We want to compute the relative free energy of hydration between ethane and methanol, $\\Delta \\Delta G_{\\mathrm{hyd,\\: ethane-methanol}}$. This is the free energy difference between hydrating an ethane molecule in water and a methanol molecule in water. (For reference, refer to the [slides](slides/CCPBioSim-FEP-tutorial.pdf)).\n",
     "\n",
     "Below you can see a thermodynamic cycle for the relative hydration free energy of ethane and methanol:\n",
     "![therm_cycle](images/Therm_cycle.png)"
@@ -80,6 +80,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Because free energy is a state function, the total free energy change around the cycle is 0:\n",
+    "\n",
+    "$\\Delta G^{\\mathrm{ethane}}_{\\mathrm{hyd}} + \\Delta G_{\\mathrm{solv}} - \\Delta G^{\\mathrm{methanol}}_{\\mathrm{hyd}} -  \\Delta G_{\\mathrm{vac}} = 0$\n",
+    "\n",
+    "This allows us to obtain $\\Delta \\Delta G_{\\mathrm{hyd,\\: ethane-methanol}}$ in terms of $\\Delta G_{\\mathrm{solv}}$ and $\\Delta G_{\\mathrm{vac}}$:\n",
+    "\n",
+    "$\\Delta G^{\\mathrm{ethane}}_{\\mathrm{hyd}} - \\Delta G^{\\mathrm{methanol}}_{\\mathrm{hyd}} = \\Delta G_{\\mathrm{vac}} - \\Delta G_{\\mathrm{solv}}$\n",
+    "\n",
+    "$\\Delta \\Delta G_{\\mathrm{hyd,\\: ethane-methanol}} = \\Delta G_{\\mathrm{vac}} - \\Delta G_{\\mathrm{solv}}$\n",
+    "\n",
+    "Now we just need to compute these quantities using alchemical simulations.\n",
+    "\n",
+    "\n",
     "### 1.1 Loading ligands\n",
     "<a id=\"load\"></a>\n",
     "Next, we read in the two molecules we want to perturb. In this case, this is ethane changing to methanol. You can use the BioSimSpace function `BSS.IO.readMolecules()` for this task."
