Sign error in equations

--- a/introduction_to_alchemistry/alchemical_setup.ipynb
+++ b/introduction_to_alchemistry/alchemical_setup.ipynb
@@ -86,9 +86,9 @@
     "\n",
     "This allows us to obtain $\\Delta \\Delta G_{\\mathrm{hyd,\\: ethane-methanol}}$ in terms of $\\Delta G_{\\mathrm{solv}}$ and $\\Delta G_{\\mathrm{vac}}$:\n",
     "\n",
-    "$\\Delta G^{\\mathrm{ethane}}_{\\mathrm{hyd}} - \\Delta G^{\\mathrm{methanol}}_{\\mathrm{hyd}} = \\Delta G_{\\mathrm{vac}} - \\Delta G_{\\mathrm{solv}}$\n",
+    "$\\Delta G^{\\mathrm{methanol}}_{\\mathrm{hyd}}  - \\Delta G^{\\mathrm{ethane}}_{\\mathrm{hyd}} = \\Delta G_{\\mathrm{solv}} - \\Delta G_{\\mathrm{vac}}$\n",
     "\n",
-    "$\\Delta \\Delta G_{\\mathrm{hyd,\\: ethane-methanol}} = \\Delta G_{\\mathrm{vac}} - \\Delta G_{\\mathrm{solv}}$\n",
+    "$\\Delta \\Delta G_{\\mathrm{hyd,\\: ethane-methanol}} = \\Delta G_{\\mathrm{solv}} - \\Delta G_{\\mathrm{vac}}$\n",
     "\n",
     "Now we just need to compute these quantities using alchemical simulations.\n",
     "\n",
