Updates to notebook

--- a/absolute_binding_free_energies/absolute_binding_free_energies.ipynb
+++ b/absolute_binding_free_energies/absolute_binding_free_energies.ipynb
@@ -7,7 +7,6 @@
     "# Issues\n",
     "\n",
     "- Analyse method very slow and seems to massively underestimate with MBAR and overestimate with TI. analyse_freenrg in SOMD seems to be much faster and more reliable.\n",
-    "- Indices given by BSS restraint selection scheme do not give the correct atoms in NGLViewer\n",
     "- Need to pull version of SOMD which works with restraints into GH repo"
    ]
   },
@@ -16,7 +15,7 @@
    "metadata": {},
    "source": [
     "# <span style=\"color:teal\"> Absolute Binding Free Energies and Experimental Features in BioSimSpace</span>\n",
-    "This is the ABFE (Absolute Binding Free Energy) jupyter notebook for the September 2022 CCPBioSim Workshop. This notebook describes how the functionality of BioSimSpace may be extended using the *sandpit*, and how to set up an absolute binding free energy calculation using the functionality present in the Exscientia sandpit.\n",
+    "This is the Absolute Binding Free Energy (ABFE) jupyter notebook for the September 2022 CCPBioSim Workshop. This notebook describes how the functionality of BioSimSpace may be extended using the *sandpit*, and how to set up an absolute binding free energy calculation using the functionality present in the Exscientia sandpit.\n",
     "\n",
     "It includes core as well as <span style=\"color:purple\">extra</span> options.\n",
     "\n",
@@ -56,40 +55,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import libraries\n",
-    "import os\n",
-    "import glob\n",
-    "import csv\n",
-    "import numpy as np\n",
-    "# for the analysis\n",
-    "from alchemlyb.visualisation import plot_mbar_overlap_matrix as _plot_mbar_overlap_matrix\n",
-    "from alchemlyb.visualisation import plot_ti_dhdl as _plot_ti_dhdl\n",
-    "import math\n",
-    "import pandas as pd\n",
-    "\n",
-    "# define all the folder locations\n",
-    "main_folder =  os.getcwd()\n",
-    "print(main_folder)\n",
-    "# scripts should be located in:\n",
-    "scripts_folder = f\"{main_folder}/scripts\"\n",
-    "# other folders\n",
-    "input_dir = f\"{main_folder}/inputs\"\n",
-    "path_to_ligands = f\"{main_folder}/inputs/ligands\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### <span style=\"color:teal\">1. Experimental Features in BioSimSpace</span>\n",
     "<a id=\"exp_feat\"></a>\n",
     "\n",
-    "In order to make experimental features available alongside the current development version, BioSimSpace provides a *Sandpit* area. This can be found at `BioSimSpace.Sandpit`. The idea is that new features can be quickly made available while we work on ways to merge them into the main code.\n",
+    "In order to make experimental features available alongside the current development version, BioSimSpace provides a *sandpit* area. This can be found at `BioSimSpace.Sandpit`. The idea is that new features can be quickly made available while we work on ways to merge them into the main code.\n",
     "\n",
     "A particular sandpit, S, can be imported as `import BioSimSpace.Sandpit.S as BSS`. Currently there is only one sandpit, belonging to Exscientia. We will be using this today:"
    ]
@@ -114,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:teal\">2 Alchemical Absolute Binding Free Energies</span>\n",
+    "### <span style=\"color:teal\">2. Alchemical Absolute Binding Free Energies</span>\n",
     "<a id=\"abfe\"></a>\n",
     "##### <span style=\"color:teal\">2.1 Theory: A Brief Overview</span>\n",
     "<a id=\"theory\"></a>\n",
@@ -173,7 +145,7 @@
     "#### <span style=\"color:teal\">2.3 Loading the System</span>\n",
     "<a id=\"loading\"></a>\n",
     "\n",
-    "We'll assume that you already have an equilibrated system ready for simulation. For details on how to do this in BioSimSpace, see the [introductory tutorials](https://github.com/michellab/BioSimSpaceTutorials/tree/main/01_introduction). Here, we'll be using the [human macrophage migration inhibitory factor (MIF) / MIF180 complex](https://pubs.acs.org/doi/full/10.1021/acs.jpcb.9b07588):\n",
+    "We will assume that you already have an equilibrated system ready for simulation. For details on how to do this in BioSimSpace, see the [introductory tutorials](https://github.com/michellab/BioSimSpaceTutorials/tree/main/01_introduction). Here, we'll be using the [human macrophage migration inhibitory factor (MIF) / MIF180 complex](https://pubs.acs.org/doi/full/10.1021/acs.jpcb.9b07588):\n",
     "\n",
     "<img src=\"images/mif_mif180.png\" width=\"400\"/>\n",
     "\n",
@@ -233,7 +205,7 @@
     "\n",
     "Now, we have to tell BioSimSpace the molecule for which we want to remove the intermolecular interactions, or to \"decouple\". The function for doing this is stored in the same place as the tools needed to align and merge molecules for RBFE calulations, in `BSS.Align`.\n",
     "\n",
-    "It's important to save the updated status of the molecule using the `updateMolecule` method."
+    "It's important to save the updated status of the molecule in the system object using the `updateMolecule` method."
    ]
   },
   {
@@ -292,12 +264,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <span style=\"color:teal\">2.5 Selecting the Restraints</span>\n",
+    "#### <span style=\"color:teal\">2.2.3 Selecting the Restraints</span>\n",
     "<a id=\"restraints\"></a>\n",
     "\n",
     "The performance of ABFE calculations can be highly dependent on the restraints used. Considering the simulations connecting states 6 and 7 (see cycle above), we would like the restraints to be weak, so that the unrestrained complex is minimally perturbed and convergence is quickly achieved. However, the fastest convergence of the simulations connecting stages 4, 5, and 6 will likely be achieved by using relatively strong restraints to restrict the configurational volume which must be sampled as much as possible. We can strike a compromise between these opposing requirements by selecting the restraints to mimic native protein-ligand interactions as closely as possible, which allows us to find the strongest possible restraints which minimally perturb the unrestrained fully interacting state.\n",
     "\n",
-    "In additino, Boresch restraints have instabilites which are most commonly encountered when any of the contiguous anchor points are close to collinear. This results in large fluctuations in the dihedral angles and the application of large torques through the dihedral restraints - this can \"blow-up\" the molecular dynamics integrator, causing the simulation to crash. So, we must be careful to avoid such poor selections when choosing our restraint. \n",
+    "In addition, Boresch restraints have instabilites which are most commonly encountered when any of the contiguous anchor points are close to collinear. This results in large fluctuations in the dihedral angles and the application of large torques through the dihedral restraints - this can \"blow-up\" the molecular dynamics integrator, causing the simulation to crash. So, we must be careful to avoid such poor selections when choosing our restraint. \n",
     "\n",
     "BioSimSpace allows you to select Boresch restraints in an automated way, by running an unrestrained simulation of the fully interacting complex to allow the dynamics of the ligand with respect to the protein to be analysed. This is done using the `BSS.FreeEnergy.RestraintSearch` class, which is used to run and analyse the simulation to generate the restraints:\n",
     "\n",
@@ -318,11 +290,12 @@
    "outputs": [],
    "source": [
     "# Load the trajectory\n",
-    "traj = BSS.Trajectory.Trajectory(trajectory=\"output/restraint_search/gromacs.xtc\", topology=\"input/complex/mif_mif180.prm7\")\n",
+    "traj = BSS.Trajectory.Trajectory(trajectory=\"output/restraint_search/gromacs.xtc\",\n",
+    "                                 topology=\"input/complex/mif_mif180.prm7\")\n",
     "\n",
     "# Search for the optimal Boresch restraints\n",
-    "from BioSimSpace.Sandpit.Exscientia.Units.Temperature import kelvin\n",
-    "restraint = BSS.FreeEnergy.RestraintSearch.analyse(\"output/restraint_search\", system, traj, 298 * kelvin, method='BSS')"
+    "restraint = BSS.FreeEnergy.RestraintSearch.analyse(\"output/restraint_search\", system, traj, \n",
+    "                                                    298 * BSS.Units.Temperature.kelvin, method='BSS')"
    ]
   },
   {
@@ -333,11 +306,9 @@
     "\n",
     "- \"MDRestraintsGenerator\": This finds the restraints using the package [MDRestraintsGenerator](https://github.com/IAlibay/MDRestraintsGenerator) written by Irfan Alibay. Also see [this paper](https://chemrxiv.org/engage/chemrxiv/article-details/61f8ef518d70c3340514d25c). Candidate sets of Boresch restraints are generated and the fluctuations of the associated Boresch degrees of freedom are tracked over the unrestrained simulation. The optimum Boresch degrees of freedom are then selected as the set having the lowest total variance, and satisfying certain geometric criteria to ensure stability. The force constants of the restraints are set to some pre-defined value (here 10 kcal mol $\\mathrm{^{-1}}$ $\\mathrm{\\AA^{-2}}$ or kcal mol $\\mathrm{^{-1}}$ $\\mathrm{rad^{-2}}$).\n",
     "\n",
-    "- \"BSS\": The inbuilt BioSimSpace method. This was inspired by MDRestraintsGenerator. \n",
+    "- \"BSS\": The inbuilt BioSimSpace method. This was inspired by the MDRestraintsGenerator method. The optimum Boresch degrees of freedom are selected in a similar way to MDRestraintsGenerator, although the selection is made based on minimum configurational volume accessible to the restrained non-interacting ligand, rather than total variance, and the force constants are calculated to mimic the native protein-ligand interactions.\n",
     "\n",
-    " MDRestraintsGenerator method, which generates candidate sets of Boresch restraints and tracks the fluctuations of the associated Boresch degrees of freedom over the unrestrained simulation. The optimum Boresch degrees of freedom are then selected in a similar way to MDRestraintsGenerator, although the selection is made based on minimum configurational volume accessible to the restrained non-interacting ligand, and the force constants are calculated to mimic the native protein-ligand interactions.\n",
-    "\n",
-    " We've used the BSS method, but feel free to try the MDAnalysis method. It's always a good idea to check the distributions of the Boresch degrees of freedom over the course of the simulations, and where generated, their values against simulation time. Check the output directory to see the plots.\n",
+    " We've used the BSS method, but feel free to try the MDAnalysis method. It's always a good idea to check the distributions of the Boresch degrees of freedom over the course of the simulations and their values against simulation time (both are provided when using the BSS method, but MDRestraintsGenerator only provides the former). Check the output directory to see the plots.\n",
     "\n",
     "<span style=\"color:purple\">Extra:</span> What issues could arise during the restraint selection stage? How might the plots mentioned above help to diagnose some of these issues?\n",
     "\n",
@@ -357,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can obtain $-\\Delta\\textit{G}_{\\textrm{Release}}^o$ by using the `getCorrection` method:"
+    "We can obtain $\\Delta\\textit{G}_{\\textrm{Release}}^o$ by using the `getCorrection` method:"
    ]
   },
   {
@@ -373,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And we can check the anchor points, force constants, and equilibrium values selected:"
+    "And we can check the anchor points, force constants, and equilibrium values selected by printing out the restraint in SOMD format:"
    ]
   },
   {
@@ -382,13 +353,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "restraint._restraint_dict"
+    "restraint.toString(engine=\"Somd\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that the SOMD restraint string uses atom indices and units of $\\mathrm{\\AA}$, $\\mathrm{rad}$, and $\\mathrm{kcal}$ $\\mathrm{mol^{-1}}$.\n",
+    "\n",
     "Let's view the anchor atoms to make sure they're sensible. [This page](https://nglviewer.org/ngl/api/manual/usage/selection-language.html) on the NGLViewer selection language may be helpful."
    ]
   },
@@ -400,16 +373,19 @@
    "source": [
     "view = BSS.Notebook.View(system)\n",
     "view.molecule(0)\n",
-    "view.molecules([0,1,2,3])\n",
+    "view.molecules([0,1,2,3]) # View the ligand and all three protein chains\n",
     "#FIXME: View the anchor points using NGLViewer. The ligand can be selected with \"LIG\"\n",
-    "# and indices can be specified with the @id1,idx2,idx3... syntax"
+    "# and indices can be specified with the @id1,idx2,idx3... syntax\n",
+    "# The anchor atoms can be highlighted using a VDW radii representation, for example."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do the selected anchor points appear reasonable?"
+    "Do the selected anchor points appear reasonable?\n",
+    "\n",
+    "<span style=\"color:purple\">Extra:</span> Repeat the restraints derivation using both the \"BSS\" and \"MDRestraintsGenerator\" methods. Do both methods generate similar anchor points? Suggest reasons for any similarities and differences."
    ]
   },
   {
@@ -431,13 +407,12 @@
     "# Set up restraining stage\n",
     "lam_vals_restrain = [0.000, 0.250, 0.500, 1.000]\n",
     "restrain_protocol = BSS.Protocol.FreeEnergy(runtime=6*BSS.Units.Time.nanosecond, lam_vals=lam_vals_restrain, perturbation_type=\"restraint\")\n",
-    "restrain_fe_calc = BSS.FreeEnergy.Absolute(restraint.system, restrain_protocol, engine='gromacs', restraint=restraint, work_dir='output/restrain')\n",
-    "restrain_fe_calc.run()\n",
+    "restrain_fe_calc = BSS.FreeEnergy.Absolute(restraint.system, restrain_protocol, engine='somd', restraint=restraint, work_dir='output/restrain')\n",
     "\n",
     "# Set up discharging stage\n",
     "lam_vals_discharge = [0.000, 0.143, 0.286, 0.429, 0.571, 0.714, 0.857, 1.000]\n",
     "discharge_protocol = BSS.Protocol.FreeEnergy(runtime=6*BSS.Units.Time.nanosecond, lam_vals=lam_vals_discharge, perturbation_type=\"discharge_soft\")\n",
-    "discharge_fe_calc = BSS.FreeEnergy.Absolute(restraint.system, discharge_protocol, engine='gromacs', restraint=restraint, work_dir='output/discharge')"
+    "discharge_fe_calc = BSS.FreeEnergy.Absolute(restraint.system, discharge_protocol, engine='somd', restraint=restraint, work_dir='output/discharge')"
    ]
   },
   {
@@ -472,7 +447,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:purple\">Extra:</span> Of course, to obtain the overall free energy of binding we must perform the free leg calculations as well, where we discharge and vanish the ligand in a box of water. Set up the free leg simulations using BioSimSpace. You will find the equilibrated input files in input/free_ligand."
+    "<span style=\"color:purple\">Extra:</span> Of course, to obtain the overall free energy of binding we must perform the free leg calculations as well, where we discharge and vanish the ligand in a box of water. Set up the free leg simulations using BioSimSpace. You will find the equilibrated input files in input/free_ligand.\n",
+    "\n",
+    "<span style=\"color:purple\">Extra:</span> Repeat the set up of the bound calculations for GROMACS. Note that the perturabation type must be \"full\" (restraining, discharging and vanishing carried out in a single simulation) and the lambda values should be supplied as a pandas data frame (because GROMACS allows different lambda values to be specified simultaneously for each stage):\n",
+    "\n",
+    "```Python\n",
+    "lam_vals=pd.DataFrame(data={'bonded': [0.0, ... 1.0],\n",
+    "                            'coul': [0.0, ... 1.0],\n",
+    "                            'vdw':  [0.0, ... 1.0]}))\n",
+    "```"
    ]
   },
   {
@@ -522,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#FIXME: Plot to PMF with respect to lambda for the pre-run restraining simulations"
+    "#FIXME: Plot the PMF with respect to lambda for the pre-run restraining simulations"
    ]
   },
   {
